# mcp_server_prompt

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/mcp_server_prompt/: __init__.py  server.py
tests/: test_integration.py  test_server.py
